----------
v6.1.0-git
----------

[mms] Display Virtual Folders in smartmobile view.
[mms] Abstract all UIDs used for mailbox/message navigation on the browser to
      BUIDs (browser UIDs) (Bug #10719).
[mms] Use more efficient murmurhash3 to determine changes in compose message
      that will trigger auto saved drafts.
[mms] Initialize viewport and mailbox list in single AJAX call when initially
      loading the dynamic mailbox view.
[mms] Add message thread view to dynamic mailbox preview.
[mms] Better UI for changing quicksearch criteria in dynamic mailbox screen.
[mms] Collapse multiple mailbox export options in dynamic mailbox view to
      single action.
[mms] Importing a PGP personal key now only requires the private key.


------
v6.0.4
------

[mms] Hide attachment upload UI in dynamic view if file uploads are disabled.
[jan] Fix JavaScript errors with Internet Explorer 8.
[mms] Fix display of mail log icons on the basic message page (Bug #11964).
[jan] Fix stripping attachments in dynamic view (aarno.sandvik@helsinki.fi,
      Bug #11959).
[mms] Workaround broken Message-IDs generated by Outlook when replying to a
      message (Bug #11953).
[mms] Fix display of attachment name in basic compose screen (Bug #11947).


------
v6.0.3
------

[mms] Re-add apply mail filters action in dynamic view.
[mms] Improved parsing of References header when replying to a message.
[mms] Fix verifying an enveloped signed & encrypted S/MIME message (Bug
      #11874).
[mms] Fix converting charset of signature/trailer in compose message if not
      sending in UTF-8 (Bug #11898).
[mms] Fix redirection to mailbox page after sending message in minimal view
      (Thomas Jarosch <thomas.jarosch@intra2net.com>, Bug #11897).
[mms] Fix duplicate signature being added to compose messages in minimal view
      (Thomas Jarosch <thomas.jarosch@intra2net.com>, Bug #11896).
[jan] Update Basque translation (Ibon Igartua <ibon.igartua@ehu.es>).