@@ -34,6 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mms] Support link attachment feature in dynamic view.
 * [mms] Display Virtual Folders in smartmobile view.
 * [mms] Abstract all UIDs used for mailbox/message navigation on the browser to BUIDs (browser UIDs) (Bug #10719).
 * [mms] Use more efficient murmurhash3 to determine changes in compose message that will trigger auto saved drafts.
@@ -2932,6 +2933,7 @@
     <api>stable</api></stability>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [mms] Support link attachment feature in dynamic view.
 * [mms] Display Virtual Folders in smartmobile view.
 * [mms] Abstract all UIDs used for mailbox/message navigation on the browser to BUIDs (browser UIDs) (Bug #10719).
 * [mms] Use more efficient murmurhash3 to determine changes in compose message that will trigger auto saved drafts.
